test/error/error.input98.zc
Too many values in initialisation list on line 1
